<resources>
    <string name="app_name">TripsPlanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="background">Background</string>
    <string name="plan_your_dream_trip_in_minutes">Plan Your Dream Trip in Minutes</string>
    <string name="plan_desc">Build, personalize, and optimize your itineraries with our trip planner. Perfect for getaways, remote workcations, and any spontaneous escapade.</string>
    <string name="where_to">Where to?</string>
    <string name="location">location</string>
    <string name="select_city">Select City</string>
    <string name="enter_date">Enter Date</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="create_a_trip">Create a Trip</string>
    <string name="your_trips">Your Trips</string>
    <string name="trip_itineraries_and_planned_trips">Your trip itineraries and planned trips are placed here</string>
    <string name="planned_trips">Planned Trips</string>
    <string name="dropdown">Dropdown</string>
    <string name="paris">Paris</string>
    <string name="trip_image">trip image</string>
    <string name="bahamas_family_trip">Bahamas Family Trip</string>
    <string name="view">View</string>
    <string name="trips_design">Trips design</string>
    <string name="build_your_next_adventure">Let\'s Go! Build Your Next Adventure</string>
    <string name="enter_the_trip_name">Enter the trip name</string>
    <string name="trip_name">Trip Name</string>
    <string name="travel_style">Travel Style</string>
    <string name="select_your_travel_style">Select your travel style</string>
    <string name="trip_description">Trip Description</string>
    <string name="tell_us_more_about_the_trip">Tell us more about the trip</string>
    <string name="next">Next</string>
    <string name="trip_detail">Trip Detail</string>
    <string name="trip_collaboration">Trip Collaboration</string>
    <string name="share_trip">Share Trip</string>
    <string name="activities">Activities</string>
    <string name="activities_desc">Build, personalize, and optimize your itineraries with our trip planner.</string>
    <string name="hotels">Hotels</string>
    <string name="add_activities">Add Activities</string>
    <string name="add_flights">Add Flights</string>
    <string name="add_hotels">Add Hotels</string>
    <string name="trip_itineraries">Trip itineraries</string>
    <string name="your_trip_itineraries_are_placed_here">Your trip itineraries are placed here</string>
    <string name="flights">Flights</string>
    <string name="flight_image">Flight Image</string>
    <string name="no_request_yet">No request yet</string>
    <string name="hotels_image">Hotels Image</string>
    <string name="activities_image">Activities Image</string>
    <string name="flight_time">Flight Time</string>
    <string name="airlines_image">Airlines Image</string>
    <string name="flight_details">Flight details</string>
    <string name="price_details">Price details</string>
    <string name="edit_details">Edit details</string>
    <string name="remove">Remove</string>
    <string name="hotel_image">Hotel image</string>
    <string name="image_navigation">Image Navigation</string>
    <string name="show_in_map">Show in map</string>
    <string name="hotel_details">Hotel details</string>
    <string name="activity_image">Activity Image</string>
    <string name="activity_details">Activity details</string>
    <string name="change_time"><u>Change time</u></string>
    <string name="_10_30_am_on_mar_19"><![CDATA[10:30 AM on Mar 19]]></string>
    <string name="day_1_activity_1">Day 1 (Activity 1)</string>
    <string name="please_select_a_city">Please select a city</string>
    <string name="solo">Solo</string>
    <string name="couple">Couple</string>
    <string name="family">Family</string>
    <string name="group">Group</string>
</resources>