<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="12dp"
    android:background="@drawable/bg_trip_card">

    <FrameLayout
        android:id="@+id/fl_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/trip_image"
            android:src="@drawable/trip_card_img"
            android:layout_marginTop="12dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_text"
            android:text="@string/paris"
            android:layout_gravity="end"
            android:paddingVertical="8dp"
            android:paddingHorizontal="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:fontFamily="@font/satoshi_medium"/>

    </FrameLayout>


    <TextView
        android:id="@+id/tv_trip_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fl_img"
        app:layout_constraintStart_toStartOf="@id/fl_img"
        android:fontFamily="@font/satoshi_bold"
        android:text="@string/bahamas_family_trip"
        android:layout_marginTop="14dp"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_trip_name"
        app:layout_constraintStart_toStartOf="@id/tv_trip_name"
        tools:text="19th April 2024"
        android:fontFamily="@font/satoshi_medium"
        android:textSize="14sp"
        android:layout_marginTop="12dp"
        android:textColor="@color/text_color"
        />

    <TextView
        android:id="@+id/tv_no_of_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_trip_name"
        app:layout_constraintEnd_toEndOf="@id/fl_img"
        tools:text="5 days"
        android:fontFamily="@font/satoshi_medium"
        android:textSize="14sp"
        android:layout_marginTop="12dp"
        android:textColor="@color/text_desc_color"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/fl_img"
        app:layout_constraintEnd_toEndOf="@id/fl_img"
        android:paddingVertical="16dp"
        android:text="@string/view"
        app:layout_constraintTop_toBottomOf="@id/tv_no_of_days"
        android:background="@drawable/bg_btn"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/satoshi_medium"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>